# claude-and-codex

./: .env.example  .gitignore  CLAUDE.md  README.md  emergent_experiment.py  generate_arxiv_reports.py  generate_meta_report.py  generate_reports.py  pyproject.toml  run_trials.py
benchmarks/: bugfix_off_by_one.json  codegen_calculator.json  refactor_extract_fn.json  testwrite_utils.json
playground_cc/: CLAUDE-A.md  CLAUDE-B.md
playground_cc_r2/: claude-a.md  claude-b.md  engine.py  test_engine.py
playground_cc_r3/: DESIGN.md  DONE.md  claude-a.md  claude-b.md  engine.py  main.py  maze.py  renderer.py  test_engine.py  test_integration.py  test_maze.py  test_renderer.py  test_world.py  world.py
playground_cx/: CLAUDE_TO_CODEX.md  CODEX_TO_CLAUDE.md  DONE.md  HELLO_CLAUDE.md  HELLO_CODEX.md  MESSAGE_TO_CLAUDE.md  ai.py  game.py  main.py  maze.py  renderer.py  test_game.py  test_maze.py
playground_cx_r2/: CLAUDE_TO_CODEX.md  ant.py  claude-a.md  life.py  test_ant.py  test_life.py
playground_cx_r3/: HELLO_CODEX.md  ant.py  test_ant.py
playground_dcx/: CODEX_TO_CLAUDE.md  DIRECTOR_REPORT.md  DONE.md  HELLO_CODEX.md  MESSAGE_TO_CLAUDE.md  claude_to_codex.md  game.py  langton.py  main.py  maze.py  patterns.py  renderer.py  test_game.py  test_langton.py  test_maze.py
playground_dcx_r2/: DIRECTOR_REPORT.md  HELLO_CODEX.md  life.py  test_life.py
playground_dcx_r3/: CLAUDE_HERE.md  DIRECTOR_REPORT.md  HELLO_CODEX.md
posts/: 001-initial-implementation.md  002-claude-codex-debate.md  003-codex-v02-features.md  006-orchestrator-hardening.md  012-research-overview.md  (+3 more)
(+47 files in other folders)
