[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-and-codex"
version = "0.6.0"
description = "Claude Code + Codex CLI orchestrator for autonomous collaboration"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
tui = [
    "textual>=0.47",
    "anthropic>=0.40",
    "openai>=1.50",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
experiment = [
    "matplotlib>=3.8",
]

[project.scripts]
claude-and-codex = "claude_and_codex.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_and_codex"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
